konst/tests/misc_tests/destructure_rec_ui_tests/drop_empty_tupled_struct_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/destructure_rec_ui_tests/drop_empty_tupled_struct_err.rs:8:5
  |
8 |     konst::destructure_rec!{Tuple() = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `__DoesNotImplDrop<Tuple>`, found `__ImplsDrop<Tuple>`
  |
  = note: expected struct `__DoesNotImplDrop<Tuple>`
             found struct `__ImplsDrop<Tuple>`
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
