konst/tests/misc_tests/destructure_rec_ui_tests/drop_empty_tupled_struct_err.rs
struct Tuple();

impl Drop for Tuple {
    fn drop(&mut self) {}
}

const fn to_bar(foo: Tuple)  {
    konst::destructure_rec!{Tuple() = foo}
}

fn main(){}